<resources>
    <string name="app_name">Pets Kingdom</string>
    <string name="firebase_webclient_id">884778447707-7fbnpf0544rmj60ovg8pq7tils88nis8.apps.googleusercontent.com</string>
    <string name="login_menu">Login</string>
    <string name="logo_description">Logo Description</string>
    <string name="input_email">Input Email :</string>
    <string name="email_description">Email</string>
    <string name="input_password">Input Password :</string>
    <string name="password_description">Password</string>
    <string name="forget_password_decription">Forget Password ?</string>
    <string name="button_login_description">Login</string>
    <string name="button_reset_description">Reset</string>
    <string name="tv_register_description">Don\'t have account ? Register Here</string>
    <string name="back_description">Back Button</string>
    <string name="forget_password_note1">Forget Password ?</string>
    <string name="forget_password_note2">We will reset your password</string>
    <string name="forget_password_req">Please Input Your Email :</string>
    <string name="button_submit_description">Submit</string>
    <string name="register_menu">Register</string>
    <string name="input_full_name">Input Name :</string>
    <string name="username_description">Username</string>
    <string name="re_input_password">Re-Input Password :</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="button_register_description">Register</string>
    <string name="title_activity_drawer">Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="textview">Title</string>
    <string name="description">Description</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_account">Account</string>
    <string name="title_favorite">Favorite</string>
    <string name="product_category">Product Category</string>
    <string name="product_image">Product Image</string>
    <string name="favorite_button">Favorite Button</string>
    <string name="sales_count">Sales Count</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="product_size">Product Size</string>
    <string name="title_deskripsi_produk">Deskripsi Produk :</string>
    <string name="title_nutrisi">Nutrisi :</string>
    <string name="komposisi">Komposisi :</string>
    <string name="product_detail">Product Detail</string>
    <string name="developer">Developer</string>
    <string name="profile_button">Profile Button</string>
    <string name="logout_button">Logout Button</string>
    <string name="back_button">Back Button</string>
    <string name="share_button">Share Button</string>
    <string name="developer_profile">Developer Profile</string>
    <string name="profile_image">Profile Image</string>
    <string name="nim">NIM</string>
    <string name="my_nim">31190080</string>
    <string name="nama">Nama</string>
    <string name="my_name">Andryan</string>
    <string name="kelas">Kelas</string>
    <string name="my_class">7PSI1A</string>
    <string name="program_studi">Program Studi</string>
    <string name="my_study">Sistem Informasi</string>
    <string name="no_telepon">No Telepon</string>
    <string name="my_phone">08567519148</string>
    <string name="email">Email</string>
    <string name="my_email">s31190080@student.ubm.ac.id</string>
    <string name="contact_me">Contact Me :</string>
    <string name="or">OR</string>
    <string name="fab_phone">Floating Action Button Phone</string>
    <string name="fab_email">Floating Action Button Email</string>
    <string name="optional_login">OR Login With :</string>
</resources>