<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/black"
    app:cardElevation="5dp"
    app:cardCornerRadius="5dp"
    app:cardMaxElevation="5dp">

    <RelativeLayout
        android:id="@+id/containerContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/categoryProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="15dp"
            android:text="@string/product_category"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:textSize="14sp" />

        <ImageButton
            android:id="@+id/favoriteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="10dp"
            android:src="@drawable/ic_favorite_border"
            android:background="@android:color/transparent"
            android:contentDescription="@string/favorite_button" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            android:layout_below="@+id/categoryProduct"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/product_image" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_marginHorizontal="15dp"
            android:maxLines="1"
            android:text="@string/textview"
            android:fontFamily="sans-serif"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="10dp"
            android:text="@string/description"
            android:fontFamily="sans-serif"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/bottomDivider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@+id/description"
            android:background="?android:attr/listDivider"
            android:backgroundTint="@color/white"/>
    </RelativeLayout>

</androidx.cardview.widget.CardView>