<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/background_login"
    android:alpha="0.80"
    tools:context=".ForgetPassword">

    <!-- RelativeLayout : Toolbar / Header -->
    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:gravity="top"
        android:background="@android:color/transparent">

        <!-- ImageButton : Back Button -->
        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_back_white"
            android:background="@android:color/transparent"
            android:layout_marginHorizontal="10dp"
            android:contentDescription="@string/back_description" />

        <!-- TextView : Title -->
        <TextView
            android:id="@+id/label1Tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/forget_password_decription"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/contentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:background="@android:color/transparent">

        <!-- TextView : Instruction 1 -->
        <TextView
            android:id="@+id/label2Tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="15dp"
            android:fontFamily="sans-serif"
            android:text="@string/forget_password_note1"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <!-- TextView : Instruction 2 -->
        <TextView
            android:id="@+id/label3Tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/label2Tv"
            android:textAlignment="center"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="15dp"
            android:fontFamily="sans-serif"
            android:text="@string/forget_password_note2"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <!-- TextView : Instruction to Input Email -->
        <TextView
            android:id="@+id/label4Tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/label3Tv"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:layout_marginHorizontal="15dp"
            android:fontFamily="sans-serif"
            android:text="@string/forget_password_req"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <!-- TextInputLayout : Input Email Address -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTil"
            app:startIconDrawable="@drawable/ic_email_white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="15dp"
            android:layout_below="@+id/label4Tv">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:inputType="textEmailAddress"
                android:hint="@string/email_description"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Button : Submit Button -->
        <Button
            android:id="@+id/submitBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/emailTil"
            android:backgroundTint="#010127"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="15dp"
            android:text="@string/button_submit_description"
            tools:ignore="TextContrastCheck" />

    </RelativeLayout>

</RelativeLayout>