<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailProduct">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@android:color/background_dark"
        android:layout_alignParentTop="true"
        app:logo="@drawable/ic_back"
        app:titleTextColor="@color/white"
        app:title="Product Detail"
        android:layout_centerHorizontal="true"/>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">

        <RelativeLayout
            android:id="@+id/contentLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/productImage"
                android:layout_width="match_parent"
                android:layout_height="340dp"
                android:scaleType="fitXY"
                android:layout_marginHorizontal="10dp"
                android:src="@drawable/whiskas"
                android:contentDescription="@string/product_image"/>

            <TextView
                android:id="@+id/productName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="5dp"
                android:layout_below="@+id/productImage"
                android:text="@string/product_name"
                android:fontFamily="sans-serif"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/productPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="5dp"
                android:layout_below="@id/productName"
                android:text="@string/product_price"
                android:fontFamily="sans-serif"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/productSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="5dp"
                android:layout_below="@id/productName"
                android:layout_alignParentEnd="true"
                android:text="@string/product_size"
                android:fontFamily="sans-serif"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/horizontalDivider1"
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:layout_below="@id/productPrice"
                android:layout_marginVertical="2.5dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/titleDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="5dp"
                android:layout_below="@id/horizontalDivider1"
                android:text="@string/title_deskripsi_produk"
                android:fontFamily="sans-serif"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/productDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="2.5dp"
                android:layout_below="@id/titleDescription"
                android:text="@string/title_deskripsi_produk"
                android:fontFamily="sans-serif"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <View
                android:id="@+id/horizontalDivider2"
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:layout_below="@id/productDescription"
                android:layout_marginVertical="2.5dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/titleNutrition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="5dp"
                android:layout_below="@id/horizontalDivider2"
                android:text="@string/title_nutrisi"
                android:fontFamily="sans-serif"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/productNutrition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="2.5dp"
                android:layout_below="@id/titleNutrition"
                android:text="@string/title_deskripsi_produk"
                android:fontFamily="sans-serif"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <View
                android:id="@+id/horizontalDivider3"
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:layout_below="@id/productNutrition"
                android:layout_marginVertical="2.5dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/titleComposition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="5dp"
                android:layout_below="@id/horizontalDivider3"
                android:text="@string/komposisi"
                android:fontFamily="sans-serif"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/productComposition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="2.5dp"
                android:layout_below="@id/titleComposition"
                android:text="@string/komposisi"
                android:fontFamily="sans-serif"
                android:textColor="@color/white"
                android:textSize="12sp" />

        </RelativeLayout>

    </ScrollView>


</RelativeLayout>